[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/elements/panel_square.png" type="Texture" id=1]
[ext_resource path="res://UI/themes/hint_object_theme.tres" type="Theme" id=2]
[ext_resource path="res://inventory/inventory_slot.gd" type="Script" id=3]
[ext_resource path="res://UI/BaseToolTip.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/ToolTip.gd" type="Script" id=5]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 128, 128 )
modulate_color = Color( 0.427451, 0.435294, 1, 1 )

[node name="inventory_slot" type="PanelContainer"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 16.0
margin_bottom = 16.0
mouse_filter = 2
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 12.0
margin_bottom = 12.0
mouse_filter = 2
expand = true
stretch_mode = 6

[node name="QuantityLabel" type="Label" parent="."]
visible = false
margin_right = 16.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = ExtResource( 2 )
text = "x99"
align = 2

[node name="ToolTip" type="Node" parent="."]
script = ExtResource( 5 )
visuals_res = ExtResource( 4 )
owner_path = NodePath("..")

[connection signal="gui_input" from="." to="." method="_on_inventory_slot_gui_input"]
